--- a/vignettes/growthTools_vignette.Rmd
+++ b/vignettes/growthTools_vignette.Rmd
@@ -119,8 +119,74 @@ gdat
 Load data set:
 
 ```{r}
-head(gr.ests2)
+head(example_TPC_data)
 ```
+
+This data set contains information on the growth rate (mu) of one focal strain of a diatom (isolate.id) collected from Narragannsett Bay, RI in 2017. This isolate was grown at a range of differen temperatures, over three separate dilution periods, and replicated three times at each level. The final column, 'best.model' reflects the model used to provide the growth rate estimates, using functions from the `growthTools` package as described in the preceding section.
+
+Now, we can use the function `get.nbcurve.tpc()` to fit thermal performance curves (using the re-parameterized Norberg function - see `nbcurve2()`) to the growth rate data. This is easily done for a single dilution period:
+
+```{r}
+# Single data set:
+sp1 <- example_TPC_data %>% filter(isolate.id=='CH30_4_RI_03' & dilution==1)
+
+# obtain Norberg curve parameters, using a grid search algorithm to consider a range of possible initial parameter values, and plot the results
+nbcurve.traits<-get.nbcurve.tpc(sp1$temperature,sp1$mu,method='grid.mle2',plotQ=T,conf.bandQ = T,fpath=NA)
+data.frame(nbcurve.traits)
+```
+
+But can also be automatically applied to multiple dilution periods or otherwise independent thermal performance curves (e.g., from different species or populations):
+
+```{r,echo=F}
+# First, let's look at an example with multiple dilutions but the same strain:
+sp1b <- example_TPC_data %>% filter(isolate.id=='CH30_4_RI_03')
+
+# apply get.nbcurve to the entire data set, grouping by isolate and dilution
+res <- sp1b %>% group_by(isolate.id,dilution) %>% do(tpcs=get.nbcurve.tpc(.$temperature,.$mu,method='grid.mle2',plotQ=T,conf.bandQ=T,fpath=NA,id=.$dilution))
+
+```
+
+This approach also allows a fair amount of customization. For example, we can save the plots to a file folder, rather than displaying them directly:
+
+```{r}
+# or saving resulting plots:
+fpath<-'/Users/colin/Research/Software/growthTools/user/'
+
+# provide an explicit fpath to invoke plot saving; when `id` is also provided, this column will be used to produce the plot's title, as well as included in the file name.
+res <- sp1b %>% group_by(isolate.id,dilution) %>% do(tpcs=get.nbcurve.tpc(.$temperature,.$mu,method='grid.mle2',plotQ=T,conf.bandQ=T,fpath=fpath,id=.$dilution))
+```
+
+You can also turn off plotting all together, or only the confidence bands:
+
+```{r}
+res <- sp1b %>% group_by(isolate.id,dilution) %>% do(tpcs=get.nbcurve.tpc(.$temperature,.$mu,method='grid.mle2',plotQ=T,conf.bandQ=F,fpath=NA,id=.$dilution))
+
+res <- sp1b %>% group_by(isolate.id,dilution) %>% do(tpcs=get.nbcurve.tpc(.$temperature,.$mu,method='grid.mle2',plotQ=F,conf.bandQ=F,fpath=NA,id=.$dilution))
+```
+
+After executing any of these, you can use `summarise` to recover parameter estimates and other diagnostic information corresponding to each curve fit.
+
+```{r}
+# process results
+res %>% summarise(isolate.id,dilution,topt=tpcs$o,tmin=tpcs$tmin,tmax=tpcs$tmax,rsqr=tpcs$rsqr,a=exp(tpcs$a),b=tpcs$b,w=tpcs$w)
+```
+
+## Allow for multiple grouping variables:
+
+We could also apply this approach to a larger data set, with more species and additional grouping variables:
+
+```{r}
+table(example_TPC_data[,c('isolate.id','dilution')])
+
+# create informative ID column for each combo of unique strain and dilution period:
+example_TPC_data$id<-paste(example_TPC_data$isolate.id,example_TPC_data$dilution)
+
+res2 <- sp1b %>% group_by(isolate.id,dilution) %>% do(tpcs=get.nbcurve.tpc(.$temperature,.$mu,method='grid.mle2',plotQ=F,conf.bandQ=F,fpath=NA,id=.$id))
+
+res2 %>% summarise(isolate.id,dilution,topt=tpcs$o,tmin=tpcs$tmin,tmax=tpcs$tmax,rsqr=tpcs$rsqr,a=exp(tpcs$a),b=tpcs$b,w=tpcs$w)
+
+```
+
 
 ```{r}
 # Preliminary plotting:
