--- a/inst/doc/growthTools_vignette.Rmd
+++ b/inst/doc/growthTools_vignette.Rmd
@@ -31,7 +31,7 @@ library(mleTools)
 
 ```{r}
 # Construct example data set:
-sdat<-data.frame(trt=c(rep('A',10),rep('B',10),rep('C',10)),dtime=rep(seq(1,10),3),ln.fluor=c(c(1,1.1,0.9,1,2,3,4,5,5.2,4.7),c(1.1,0.9,1,2,3,4,4.1,4.2,3.7,4)+0.3,c(3.5,3.4,3.6,3.5,3.2,2.2,1.2,0.5,0.4,0.1)))
+sdat<-data.frame(trt=c(rep('A',10),rep('B',10),rep('C',10),rep('D',10)),dtime=rep(seq(1,10),4),ln.fluor=c(c(1,1.1,0.9,1,2,3,4,5,5.2,4.7),c(1.1,0.9,1,2,3,4,4.1,4.2,3.7,4)+0.3,c(3.5,3.4,3.6,3.5,3.2,2.2,1.2,0.5,0.4,0.1),c(5.5,4.5,3.5,2.5,1.5,0,0.2,-0.1,0,-0.1)))
 ```
 
 ## Basic example: working with a single time series
@@ -46,9 +46,11 @@ ggplot(sdat,aes(x=dtime,y=ln.fluor))+
 ```
 
 
-First, let's focus on applying this technique to a single time series, to get a feel for the methodology:
+First, let's focus on applying this technique to a single time series, to get a feel for the methodology. In the process, a series of 5 different possible models are fit to the supplied time series data: (1) a linear model, (2) a lagged growth model, (3) a saturating growth model, (4) a model of exponential decline that hits a floor, characteristic of a detection threshold, and (5) a model where growth is both lagged and achieves saturation. Any model fit where the inferred phase of exponential growth (increasing or decreasing linear portion) contains fewer than three observations is automatically excluded from consideration. The remaining models are then competed against each other based on information criteria (IC), and the estimate of exponential growth corresponding to the best model is returned. Users can select one of a few different IC options, including AIC, AICc, BIC; more on this later.
 
-```{r}
+Here is an example from a single time series:
+
+```{r,error=FALSE}
 # subset the data, focusing on population A:
 sdat2<-sdat[sdat$trt=='A',]
 
@@ -56,23 +58,48 @@ sdat2<-sdat[sdat$trt=='A',]
 res<-get.growth.rate(sdat2$dtime,sdat2$ln.fluor,plot.best.Q = T,id = 'Population A')
 ```
 
-The result (shown in the above plot) indicates that both lagged and saturating portions are present in the time series, as the lagsat model outperforms all of the simpler models. The function also returns the slope (growth rate) obtained from the best model: 
+The result (shown in the above plot) indicates that both lagged and saturating portions are present in the time series, as the lagsat model outperforms all of the simpler models. The inferred exponential phase - highlighted in red - has a slope that corresponds to the estimated growth rate, obtained from the best model: 
 
 ```{r}
 res$best.model
 res$best.slope
 ```
 
-It's also possible to access information from the models that were fit, but not the best. For example:
+A variety of other diagnostics are available, including the R2 for the best model:
+
+```{r}
+res$best.model.rsqr
+```
+
+The standard error associated with the slope estimate:
+
+```{r}
+res$best.se
+```
+
+And the number of observations falling within the exponential phase identified in the best model, as well as the R2 for just the exponential portion of the model:
+
+```{r}
+res$best.model.slope.n
+res$best.model.slope.r2
+```
+
+These diverse diagnostics can be used in downstream analyses to assess the quality of the model fits, and the reliability of the exponential growth rate estimates.
+
+
+It's also possible to access information from the entire suite of models that were fit, not just the one selected as the best model. For example, here's a summary of the lagged growth model (saturated, floored, and lag/sat models can be similarly accessed):
 
 ```{r}
 summary(res$models$gr.lag)
 ```
 
-Finally, all of the growth rate estimates are retained:
+We can also get summary values for all of the models, including the slopes (growth rates), and the standard error, R2, and number of observations associated with the slope estimates:
 
 ```{r}
 res$slopes
+res$ses
+res$slope.rs
+res$slope.ns
 ```
 
 Looking at these, we can see that the growth rate estimates from the linear, lagged, and saturating models are all significantly lower than the estimate from the lagged and saturated model, which captures the correct slope.
@@ -80,7 +107,7 @@ Looking at these, we can see that the growth rate estimates from the linear, lag
 This is also reflected in the standard error values associated with each slope estimate, obtained via:
 
 ```{r}
-res$bes.se
+res$best.se
 res$ses
 ```
 
@@ -95,13 +122,13 @@ The result is a grouped data frame, which we directly pass to the `do()` command
 
 In this instance, we request that the best fitting models are plotted, but leave the file path (`fpath`) option as `NA`, so the plots are displayed rather than saved to a directory. When working with a larger data set, the number of plots can be unwieldly, so it is recommended that you save rather than immediately display them.
 
-```{r}
+```{r,error=FALSE}
 gdat <- sdat %>% group_by(trt) %>% do(grs=get.growth.rate(x=.$dtime,y=.$ln.fluor,id=.$trt,plot.best.Q=T,fpath=NA))  
 ```
 
 The resulting data frame is a complex structure - it contains the columns used for grouping (in this case, just `trt`), as well as a new column called `grs`. The entries in `grs` consist of the result of applying `get.growth.rate()` to each time series, including the identity of the best fit model, slope estimates, model contents, etc.
 
-We can process this complex data structure further to obtain say just the best slope (growth rate) estimates, the identity of the best model, and the standard error associated with the growth rate estimate:
+We can process this complex data structure further to obtain the different output that we're interested in. Say for example that we just want the best slope (growth rate) estimates, the identity of the best model, and the standard error associated with the growth rate estimate:
 
 ```{r}
 gdat %>% summarise(trt,mu=grs$best.slope,best.model=grs$best.model,best.se=grs$best.se)
@@ -109,16 +136,45 @@ gdat %>% summarise(trt,mu=grs$best.slope,best.model=grs$best.model,best.se=grs$b
 
 The result lists each population/time series, the best growth rate estimate (`mu`), and the identity of the model that produced this estimate.
 
+However, you can select any diagnostics you want by including them in the `summarise()` command. For example, we could also request the R2 of the best model, and the number of observations falling within the exponential phase:
 
-## Method selection
+```{r}
+gdat %>% summarise(trt,mu=grs$best.slope,best.model=grs$best.model,best.se=grs$best.se,best.R2=grs$best.model.rsqr,nobs.exp=grs$best.model.slope.n)
+```
 
-In some situations it may be desirable to only invoke particular models/methods when estimating growth rate. For example, appropriately detecting lags or saturation requires longer time series, otherwise there's a greater chance of overfitting the data. In these cases, we might prefer to just calculate growth rate using a simple linear regression, and not bother with the more complicated approaches. Here's an example:
+
+## Method specification
+
+In some situations it may be desirable to only invoke particular models/methods when estimating growth rate. For example, appropriately detecting lags or saturation requires longer time series, otherwise there's a greater chance of overfitting the data - so two or three observations won't be sufficient. Indeed, situations with only 2 timepoints will throw an error message, although the algorithm still proceeds with the linear model.
+
+In these cases, we might prefer to tell the algorithm to just calculate growth rate using a simple linear regression, and not bother with the more complicated approaches. Here's an example (note that I've also turned off the plotting feature):
 
 ```{r}
 # Only use the linear method:
-gdat <- sdat %>% group_by(trt) %>% do(grs=get.growth.rate(x=.$dtime,y=.$ln.fluor,id=.$trt,plot.best.Q=T,methods=c('linear'))) %>% summarise(trt,mu=grs$best.slope,best.model=grs$best.model)
+gdat <- sdat %>% group_by(trt) %>% do(grs=get.growth.rate(x=.$dtime,y=.$ln.fluor,id=.$trt,plot.best.Q=F,methods=c('linear'))) %>% summarise(trt,mu=grs$best.slope,best.model=grs$best.model)
 gdat
 ```
+
+Or maybe we want to use the lagged, saturated, or floored models, but not linear or lagsat:
+
+```{r,error=FALSE}
+# Only use the linear method:
+gdat <- sdat %>% group_by(trt) %>% do(grs=get.growth.rate(x=.$dtime,y=.$ln.fluor,id=.$trt,plot.best.Q=F,methods=c('lag','sat','flr'))) %>% summarise(trt,mu=grs$best.slope,best.model=grs$best.model)
+gdat
+```
+
+
+
+## Model selection
+
+We can also indicate which of three information criteria to use when selecting the 'best model' - AIC, AICc, or BIC. The default if no option is specified is to use AICc, which adjusts for the effects of small sample sizes, but converges on AIC in the limit of large sample sizes. Here's an example invoking BIC instead:
+
+```{r,error=FALSE}
+gdat <- sdat %>% group_by(trt) %>% do(grs=get.growth.rate(x=.$dtime,y=.$ln.fluor,id=.$trt,plot.best.Q=F,model.selection=c('BIC'))) %>% summarise(trt,mu=grs$best.slope,best.model=grs$best.model)
+gdat
+```
+
+Note that if one model strongly outperforms the rest, the choice of IC to use likely won't change the outcome.
 
 
 
@@ -134,7 +190,7 @@ This data set contains information on the growth rate (mu) of one focal strain o
 
 Now, we can use the function `get.nbcurve.tpc()` to fit thermal performance curves (using the re-parameterized Norberg function - see `?nbcurve2()`) to the growth rate data. This is easily done for a single dilution period:
 
-```{r}
+```{r,error=FALSE,warning=F}
 # Single data set:
 sp1 <- example_TPC_data %>% filter(isolate.id=='CH30_4_RI_03' & dilution==1)
 
@@ -145,7 +201,7 @@ data.frame(nbcurve.traits)
 
 But can also be automatically applied to multiple dilution periods or otherwise independent thermal performance curves (e.g., from different species or populations):
 
-```{r,echo=F}
+```{r,error=FALSE,warning=F}
 # First, let's look at an example with multiple dilutions but the same strain:
 sp1b <- example_TPC_data %>% filter(isolate.id=='CH30_4_RI_03')
 
@@ -166,7 +222,7 @@ This approach also allows a fair amount of customization. For example, we can sa
 
 You can also turn off plotting all together, or turn off only the confidence bands:
 
-```{r}
+```{r,error=FALSE,warning=F}
 nb.res <- sp1b %>% group_by(isolate.id,dilution) %>% do(tpcs=get.nbcurve.tpc(.$temperature,.$mu,method='grid.mle2',plotQ=T,conf.bandQ=F,fpath=NA,id=.$dilution))
 
 sp1b %>% group_by(isolate.id,dilution) %>% do(tpcs=get.nbcurve.tpc(.$temperature,.$mu,method='grid.mle2',plotQ=F,conf.bandQ=F,fpath=NA,id=.$dilution))
@@ -179,6 +235,12 @@ After executing any of these, you can use `summarise` to recover parameter estim
 nb.res2<-nb.res %>% summarise(isolate.id,dilution,topt=tpcs$o,tmin=tpcs$tmin,tmax=tpcs$tmax,rsqr=tpcs$rsqr,a=exp(tpcs$a),b=tpcs$b,w=tpcs$w)
 
 nb.res2
+```
+
+A variety of other diagnostics are available, including log likelihood of the model fit, AIC, the total number of observations the regression is based on, how many unique temperature treatments are involved, and approximate confidence intervals for the coefficients of the model (based on Fisher information). These can be accessed by including additional terms in the summarise command, for example:
+
+```{r}
+nb.res %>% summarise(isolate.id,dilution,topt=tpcs$o,topt.lwr=tpcs$ciF[1,1],topt.upr=tpcs$ciF[1,2],ntemps=tpcs$ntemps)
 ```
 
 ## Double exponential model:
@@ -197,9 +259,9 @@ de.res2 <- de.res %>% summarise(isolate.id,dilution,topt=tpcs$topt,tmin=tpcs$tmi
 de.res2
 ```
 
-It should also be straightforward to fit both types of model to your data, then try to decide which model performs best, using criteria such as R2 or AIC. Here's a basic visual comparison: 
+It should also be straightforward to fit both types of model to your data, then try to decide which model performs best, using criteria such as R2 or AIC. For now though, here's a basic visual comparison: 
 
-```{r}
+```{r,error=FALSE,warning=F}
 library(reshape2)
 
 nb.res3<-melt(nb.res2,id.vars=c('isolate.id','dilution'))
