be explicit about loading example data from the package

--- a/vignettes/growthTools_vignette.Rmd
+++ b/vignettes/growthTools_vignette.Rmd
@@ -231,6 +231,7 @@ Note that if one model strongly outperforms the rest, the choice of IC to use li
 Load data set:
 
 ```{r}
+data("example_TPC_data")
 head(example_TPC_data)
 ```
 
